Added verification endpoint
