# swaggerSpec.json
@@ -126,6 +126,38 @@
           }
         }
       }
+    },
+    "/verification/verify": {
+      "post": {
+        "summary": "Verify a user's identity",
+        "description": "Allows an authenticated user to verify their identity.",
+        "tags": [
+          "Verification"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/Cookie"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Verification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "Verification successful"
+          },
+          "default": {
+            "$ref": "#/components/responses/DefaultErrorResponse"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -165,6 +197,27 @@
             "type": "string"
           }
         }
+      },
+      "Verification": {
+        "type": "object",
+        "required": [
+          "idFrontImage",
+          "personImage"
+        ],
+        "properties": {
+          "idFrontImage": {
+            "$ref": "#/components/schemas/Base64Type"
+          },
+          "personImage": {
+            "$ref": "#/components/schemas/Base64Type"
+          }
+        }
+      },
+      "Base64Type": {
+        "type": "string",
+        "pattern": "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$",
+        "minLength": 1,
+        "example": "JVBERi0...U9GCg=="
       },
       "Message": {
         "type": "object",
